# nba-scorigami

./: pyproject.toml
nba_scorigami/database/: scrape.py
